# sync-certs

./: .dockerignore  Cargo.toml  Dockerfile  NOTES.md  README.md  artifacthub-repo.yml  client.go  client.js  go.mod  go.sum  index.js  index.yaml  main.go  package.json
.github/workflows/: chart-publish.yml  docker-publish.yml  publish.yml
charts/sync-certs/: Chart.yaml  values.yaml
charts/sync-certs/templates/: cronjob.yaml  rbac.yaml  secret.yaml
charts/sync-qcloud-cdn-cert/: Chart.yaml  values.yaml
charts/sync-qcloud-cdn-cert/templates/: cronjob.yaml  rbac.yaml  secret.yaml
src/: applyment.rs  client.rs  main.rs
src/adapters/: aliyun_cdn.rs  common.rs  mod.rs  tencent_cloud_cdn.rs
