[package]
name = "sync-certs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hmac = "0.12.1"
json-patch = "0.3.0"
k8s-openapi = { version = "0.16.0", features = ["v1_25"] }
kube = "0.76.0"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
sha2 = "0.10.6"
time = { version = "0.3.17", features = ["formatting", "macros"] }
tokio = { version = "1.23.0", features = ["full"] }
