[package]
name = "sync-certs"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true

[dependencies]
hmac = "0.12.1"
json-patch = "0.3.0"
k8s-openapi = { version = "0.16.0", features = ["v1_25"] }
kube = { version = "0.77.0", default-features = false, features = ["rustls-tls", "client"] }
reqwest = { version = "0.11.13", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
sha2 = "0.10.6"
time = { version = "0.3.17", features = ["formatting", "macros"] }
tokio = { version = "1.23.0", features = ["full"] }
